--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,12 +54,27 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
-$color-adicional-2: #00BCD4
+$color-primario: #84A065
+$color-secundario: #DDD8BB
+$color-acento-contenido: #EFDB59
+$color-acento-botones: #F59B25
+$color-adicional-1: #EEB4AF
+$color-adicional-2: #DCD7BA
+$color-adicional-3: #FCF8DE
+$color-adicional-4: #F9F7F4
+$color-adicional-5: #FEEAD4
+$color-adicional-6: #F8F0BC
+$color-adicional-7: #FED6A8
+$color-adicional-8: #EFDB59
+$color-adicional-9: #F3F6F0
+$color-adicional-10: #6A8051
+$color-adicional-11: #CED9C1
+$color-adicional-12: #F1EFE3
+$color-adicional-13: #F8E1DF
+$color-adicional-14: #D2E1F1
+$color-adicional-15: #F3F9FF
+$color-adicional-16: #E8E8E8
+
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -79,7 +94,7 @@ $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $white
-$color-banner-text: $white
+$color-banner-text: $color-sistema-texto
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
