--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -104,13 +104,360 @@ figcaption
 
     
 /// TITULOS TERCER NIVEL
+.caja-titulos-tercer-nivel
+  background-color: $color-acento-contenido
+  border-radius: 25px
+  display: inline-flex
+  align-items: center
+  padding: 1rem
+  height: 40px
+  margin-left: 0.2rem
+  @media screen and (max-width: 768px)
+    margin-left: 0rem
+    padding: 0.5rem 1rem 0.5rem 1.5rem !important
+    width: auto
+    height: auto
+  @media screen and (max-width: 1200px)
+    padding: 1.5rem
+    margin-left: 0.4rem
+  h3
+    margin-left: 0rem
+    padding-left: 0rem
+    align-items: center
+    white-space: normal
+    word-break: break-word
+    margin-bottom: 0px
+  img
+    position: relative
+    left: -10px
+    bottom: 4px
+    @media screen and (max-width: 1200px)
+      bottom: 1px
+    @media screen and (max-width: 768px)
+      bottom: 0px
+
+
+
 /// FONDOS
+.fondo___slider
+  background-image: url("../assets/curso/temas/img4.png")
+  background-repeat: no-repeat
+  background-size: cover
+  margin-inline: -3.2rem !important
+  padding: 3rem 0rem
+
+.fondo___img
+  background-image: url("../assets/curso/temas/img13.png")
+  background-repeat: no-repeat
+  background-size: 1145px
+  margin-inline: -3.2rem !important
+  @media screen and (min-width: 1400px)
+    background-size: 1325px
+
+.fondo___img_1
+  background-image: url("../assets/curso/temas/img31.png")
+  background-repeat: no-repeat
+  background-size: 1145px
+  margin-inline: -3.2rem !important
+  @media screen and (min-width: 1400px)
+    background-size: 1325px
+
+
+
 /// INTRO
-/// TEMA 
+.video
+  iframe
+    border-radius: 10px !important
+
+
+
+/// TEMA 1
+.estilo___ul
+  li
+    margin-left: -1rem
+
+.pasos-b__header__btn--left
+  background-color: $color-acento-botones
+  border: 1px solid white
+.pasos-b__header__btn--left:hover
+  border: 1px solid white
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2)
+.pasos-b__header__btn--right
+  background-color: $color-acento-botones
+  border: 1px solid white
+.pasos-b__header__btn--right:hover
+  border: 1px solid white
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2)
+.ajuste-slider
+  width: 100% !important
+  border-radius: 20px
+  margin: 0rem !important
+  padding: 4rem 3rem !important
+  background-color: $white
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
+  p
+    padding: 0rem 0rem 0rem 4rem
+  h4
+    padding: 0rem 0rem 0rem 4rem
+  @media screen and (max-width: 1200px)
+    margin: 4rem 0rem 4rem 2rem
+    p
+      padding: 0rem
+    h4
+      padding: 0rem
+
+
+
+/// TEMA 2
+.lista-ol--cuadro
+  li
+    display: flex
+.lista-ol--cuadro__vineta
+  color: $color-sistema-texto
+
+.tarjeta.color-acento-botones
+  background-color: white
+  padding: 3rem 2.5rem !important
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3)
+  p
+    color: $color-sistema-texto
+.horizontal-scroll__wrapper
+  padding: 1rem 0.5rem
+.fa-chevron-right
+  color: $color-acento-botones
+.fa-chevron-left
+  color: $color-acento-botones
+.estilo-text
+  background-color: $color-adicional-2
+  text-align: center
+  padding: 0.3rem
+.slyder-f__btn i
+  font-size: 1.2rem
+  background-color: #F4A94B
+  color: $color-sistema-texto
+  border-radius: 50px
+  padding: 0.8rem 1rem
+.slyder-f__btn i:hover
+  background-color: $color-acento-botones
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3)
+  border: 1px solid white
+  transition: opacity 0.3s ease-in-outbox-shadow 0.3s ease-in-out
+
 /// BLOQUE 1 -----------------------
+.estilo___caja_1
+  background-color: $color-adicional-3
+  border-radius: 8px
+  padding: 0.7rem 0rem 0.4rem 2rem
+  img
+    margin-right: -0.7rem !important
+  @media screen and (max-width: 1200px)
+    padding: 1.5rem
+  @media screen and (min-width: 1400px)
+    padding: 0rem 0rem 0rem 2rem
+
 /// BLOQUE 2 -----------------------
+.ajuste___tabla
+  table
+    border: 1px solid #E1E1E1 !important
+    border-collapse: collapse
+    width: auto
+    table-layout: auto
+  thead
+    border-top: 4px solid $color-acento-botones !important
+    background-color: $color-adicional-4!important
+  tr
+    border: 1px solid #E1E1E1 !important
+  th
+    border: 1px solid #E1E1E1 !important
+.ajuste___linea_right
+  text-align: left
+  border-right: 1px solid #E1E1E1 !important
+.ajuste___i
+  font-size: 1.7rem
+.ajuste___campo 
+
+.tarjeta--boton
+  background-color: $color-adicional-5
+.tarjeta--boton:hover
+  background-color: $color-adicional-6
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3)
+.estilo___h3
+  background-color: $color-adicional-7
+
+
+
+/// TEMA 3
 /// BLOQUE 3 -----------------------
+.tabs-a__tab__selected
+  background-color: $color-primario !important
+.tabs-a__tab__text
+  color: black
+.tabs-a__tab
+  background-color: $color-adicional-9
+.color-acento-botones--borde
+  border: none !important
+  background-color: $color-adicional-11 !important
+  padding: 9.5rem 2rem !important
+  @media screen and (max-width: 1200px)
+    padding: 2.5rem !important
+  
 /// BLOQUE 4 -----------------------
+.acordion__accion__btn--a
+  background-color: $color-acento-botones
+.acordeonA
+  position: relative
+  background-color: $color-adicional-11
+  width: 100%
+  @media screen and (max-width: 1200px)
+    width: 100%
+  p
+    padding-left: 3.5rem
+.acordion__activo
+  background-color: $color-adicional-9
+  h3
+    color: black !important
+  p
+    padding-left: 4.4rem
+.ajuste-cajaAcordion
+  padding: 0rem 1rem 0rem 0rem
+
+.tabs-c__tab--active
+  font-weight: bold
+.tabs-c__content-item
+  background-color: $color-adicional-12
+  padding: 2rem
+.tabs-c
+  border-bottom: none !important
+
 /// BLOQUE 5 -----------------------
-/// BLOQUE 6 -----------------------
-/// BLOQUE 7 -----------------------
+.linea-tiempo-d.color-secundario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+  background-color: $color-adicional-11
+.linea-tiempo-d__item__number
+  background-color: $color-adicional-13
+.linea-tiempo-d__item__number:hover
+  background-color: $color-adicional-11 !important
+.linea-tiempo-d__item__content__title
+  background-color: $color-adicional-13
+  transition: background-color 0.3s ease-in-out
+  border-top-left-radius: 10px
+  border-top-right-radius: 10px
+.linea-tiempo-d__item--selected .linea-tiempo-d__item__content__title
+  background-color: $color-adicional-11 !important
+.linea-tiempo-d__item__content__slot
+  background-color: $color-adicional-11
+  border-bottom-left-radius: 10px
+  border-bottom-right-radius: 10px
+
+
+
+
+/// TEMA 4
+.estilo-text_1
+  background-color: $color-acento-contenido
+  text-align: center
+  padding: 0.3rem
+
+
+
+
+/// TEMA 5
+.col-xl-6.estilo___caja_2
+  background-color: $color-adicional-13
+  border-radius: 14px
+  padding: 1rem 2rem
+  @media screen and (max-width: 1200px)
+    padding: 1.5rem
+  @media screen and (min-width: 1400px)
+    padding: 2.5rem 2rem
+
+/// BLOQUE 1 -----------------------
+.ajuste___negrita
+  background-color: $color-adicional-16
+  padding: 0.2rem 1.5rem
+
+.slyder-a__item
+  padding: 1rem !important
+.slyder-a__btn--atrs, .slyder-a__btn--sigt
+  background-color: $color-acento-botones
+.slyder-a__bullets__item 
+  background-color: #FDEF92 !important
+  border: 0px
+.slyder-a__bullets__item--active
+  background-color: #F6E15C !important
+.slyder-a__bullets__item
+  @media screen and (max-width: 768px)
+    width: 10px !important
+    height: 10px !important
+    margin: 0.4rem
+.ajuste-slider
+  width: 100% !important
+  border-radius: 20px
+  margin: 0rem !important
+  padding: 3rem !important
+  background-color: $white
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
+  p
+    padding: 0rem 2rem
+  h4
+    padding: 0rem 2rem
+  ul
+    padding: 0rem 2rem 0rem 3rem
+  @media screen and (max-width: 576px)
+    padding: 1rem 2rem 1rem 2rem !important
+  @media screen and (max-width: 768px)
+    margin: 2rem 1rem 2rem 2rem 
+    padding: 2rem 2rem 1rem 2rem 
+  @media screen and (max-width: 1200px)
+    margin: 4rem 0rem 4rem 2rem
+    p
+      padding: 0rem
+    h4
+      padding: 0rem
+    ul
+      padding: 0rem 0rem 0rem 1rem
+  @media screen and (min-width: 1400px)
+    margin: 2rem 3rem
+    padding: 2rem 
+
+
+
+/// TEMA 6
+.estilo___caja_3
+  background-color: $color-adicional-6
+  border-radius: 14px
+  padding: 2rem 2rem
+  @media screen and (max-width: 1200px)
+    padding: 1.5rem
+  @media screen and (min-width: 1400px)
+    padding: 3rem 2rem
+
+/// BLOQUE 1 -----------------------
+.estilo___caja_4
+  background-color: $color-adicional-13
+  padding: 1.5rem
+  margin-bottom: 3rem !important
+
+/// BLOQUE 2 -----------------------
+.estilo___caja_5
+  background-color: $color-acento-botones
+  border-radius: 11px
+  padding: 1.5rem
+
+/// BLOQUE 4 -----------------------
+.estilo___i
+  li
+    padding: 0rem 4rem 0rem 0rem
+    margin-left: 3.5rem
+
+.estilo___caja_6
+  background-color: $color-adicional-3
+  border-radius: 11px
+  padding: 1.5rem
+
+/// BLOQUE 5 -----------------------
+.estilo___caja_7
+  background-color: $color-acento-contenido
+  border-radius: 11px
+  padding: 1.5rem
+  align-content: center
+
